@@ -6,6 +6,8 @@
 
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
+    <uses-permission-sdk-23 android:name="string" />
+
     <uses-feature android:name="android.hardware.location" android:required="true"/>
     <uses-feature android:name="android.hardware.location.network" android:required="true"/>
     <uses-feature android:name="android.hardware.location.gps" android:required="true"/>
